Add media query for mobile layout 425px

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 understanding of life, meaning, and existence.</div>
             <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><button>Sign up</button></a>
         </div>
-        <div>
+        <div class="vid">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/WpM-QjkNufw?si=viam04aN9-GiRElJ"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
